--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-forms-lib": "^1.10.3",
+    "yup": "^0.32.9"
   }
 }
