--- a/client/package.json
+++ b/client/package.json
@@ -15,18 +15,14 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.38.3",
-    "svelte-use-form": "^2.4.1"
+    "svelte": "^3.38.3"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bulma": "^0.9.3",
     "final-form": "^4.20.2",
     "lodash": "^4.17.21",
     "sirv-cli": "^1.0.0",
-    "svelte-final-form": "^1.2.3",
-    "svelte-forms-lib": "^1.10.3",
-    "svelte-select": "^4.2.7",
-    "yup": "^0.32.9"
+    "svelte-navigator": "^3.1.5",
+    "svelte-select": "^4.2.7"
   }
 }
